VBasicParser.py
# Generated from VBasic.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class VBasicParser ( Parser ):

    grammarFileName = "VBasic.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'$'", "'%'", "'RETURN'", "'PRINT'", "'GOTO'", 
                     "'GOSUB'", "'IF'", "'NEXT'", "'THEN'", "'REM'", "'CHR$'", 
                     "'MID$'", "'LEFT$'", "'RIGHT$'", "'STR$'", "'('", "')'", 
                     "'+'", "'-'", "'*'", "'/'", "'CLEAR'", "'>: '", "'<: '", 
                     "'>'", "'<'", "','", "'LIST'", "'RUN'", "'END'", "'LET'", 
                     "'='", "'FOR'", "'TO'", "'STEP'", "'INPUT'", "';'", 
                     "'DIM'", "'SQR'", "':'", "'TEXT'", "'HGR'", "'HGR2'", 
                     "'LEN'", "'CALL'", "'ASC'", "'HPLOT'", "'VPLOT'", "'PR#'", 
                     "'IN#'", "'VTAB'", "'HTAB'", "'HOME'", "'ON'", "'PDL'", 
                     "'PLOT'", "'PEEK'", "'POKE'", "'INT'", "'STOP'", "'HIMEM'", 
                     "'LOMEM'", "'FLASH'", "'INVERSE'", "'NORMAL'", "'ONERR'", 
                     "'SPC'", "'FRE'", "'POS'", "'USR'", "'TRACE'", "'NOTRACE'", 
                     "'AND'", "'OR'", "'DATA'", "'WAIT'", "'READ'", "'XDRAW'", 
                     "'DRAW'", "'AT'", "'DEF'", "'FN'", "'VAL'", "'TAB'", 
                     "'SPEED'", "'ROT'", "'SCALE'", "'COLOR'", "'HCOLOR'", 
                     "'HLIN'", "'VLIN'", "'SCRN'", "'POP'", "'SHLOAD'", 
                     "'SIN'", "'COS'", "'TAN'", "'ATN'", "'RND'", "'SGN'", 
                     "'EXP'", "'LOG'", "'ABS'", "'STORE'", "'RECALL'", "'GET'", 
                     "'^'", "'&'", "'GR'", "'NOT'", "'RESTORE'", "'SAVE'", 
                     "'LOAD'", "'?'", "'INCLUDE'", "'CLS'" ]

    symbolicNames = [ "<INVALID>", "DOLLAR", "PERCENT", "RETURN", "PRINT", 
                      "GOTO", "GOSUB", "IF", "NEXT", "THEN", "REM", "CHR", 
                      "MID", "LEFT", "RIGHT", "STR", "LPAREN", "RPAREN", 
                      "PLUS", "MINUS", "TIMES", "DIV", "CLEAR", "GTE", "LTE", 
                      "GT", "LT", "COMMA", "LIST", "RUN", "END", "LET", 
                      "EQ", "FOR", "TO", "STEP", "INPUT", "SEMICOLON", "DIM", 
                      "SQR", "COLON", "TEXT", "HGR", "HGR2", "LEN", "CALL", 
                      "ASC", "HPLOT", "VPLOT", "PRNUMBER", "INNUMBER", "VTAB", 
                      "HTAB", "HOME", "ON", "PDL", "PLOT", "PEEK", "POKE", 
                      "INTF", "STOP", "HIMEM", "LOMEM", "FLASH", "INVERSE", 
                      "NORMAL", "ONERR", "SPC", "FRE", "POS", "USR", "TRACE", 
                      "NOTRACE", "AND", "OR", "DATA", "WAIT", "READ", "XDRAW", 
                      "DRAW", "AT", "DEF", "FN", "VAL", "TAB", "SPEED", 
                      "ROT", "SCALE", "COLOR", "HCOLOR", "HLIN", "VLIN", 
                      "SCRN", "POP", "SHLOAD", "SIN", "COS", "TAN", "ATN", 
                      "RND", "SGN", "EXP", "LOG", "ABS", "STORE", "RECALL", 
                      "GET", "EXPONENT", "AMPERSAND", "GR", "NOT", "RESTORE", 
                      "SAVE", "LOAD", "QUESTION", "INCLUDE", "CLS", "COMMENT", 
                      "STRINGLITERAL", "LETTERS", "NUMBER", "FLOAT", "WS" ]

    RULE_prog = 0
    RULE_line = 1
    RULE_amperoper = 2
    RULE_linenumber = 3
    RULE_amprstmt = 4
    RULE_statement = 5
    RULE_vardecl = 6
    RULE_printstmt1 = 7
    RULE_printlist = 8
    RULE_getstmt = 9
    RULE_letstmt = 10
    RULE_variableassignment = 11
    RULE_relop = 12
    RULE_neq = 13
    RULE_ifstmt = 14
    RULE_forstmt1 = 15
    RULE_forstmt2 = 16
    RULE_nextstmt = 17
    RULE_inputstmt = 18
    RULE_readstmt = 19
    RULE_dimstmt = 20
    RULE_gotostmt = 21
    RULE_gosubstmt = 22
    RULE_pokestmt = 23
    RULE_callstmt = 24
    RULE_hplotstmt = 25
    RULE_vplotstmt = 26
    RULE_plotstmt = 27
    RULE_ongotostmt = 28
    RULE_ongosubstmt = 29
    RULE_vtabstmnt = 30
    RULE_htabstmnt = 31
    RULE_himemstmt = 32
    RULE_lomemstmt = 33
    RULE_datastmt = 34
    RULE_datum = 35
    RULE_waitstmt = 36
    RULE_xdrawstmt = 37
    RULE_drawstmt = 38
    RULE_defstmt = 39
    RULE_tabstmt = 40
    RULE_speedstmt = 41
    RULE_rotstmt = 42
    RULE_scalestmt = 43
    RULE_colorstmt = 44
    RULE_hcolorstmt = 45
    RULE_hlinstmt = 46
    RULE_vlinstmt = 47
    RULE_onerrstmt = 48
    RULE_prstmt = 49
    RULE_instmt = 50
    RULE_storestmt = 51
    RULE_recallstmt = 52
    RULE_liststmt = 53
    RULE_popstmt = 54
    RULE_amptstmt = 55
    RULE_includestmt = 56
    RULE_endstmt = 57
    RULE_returnstmt = 58
    RULE_restorestmt = 59
    RULE_number = 60
    RULE_func_ = 61
    RULE_signExpression = 62
    RULE_exponentExpression = 63
    RULE_multiplyingExpression = 64
    RULE_addingExpression = 65
    RULE_relationalExpression = 66
    RULE_expression = 67
    RULE_var_ = 68
    RULE_varname = 69
    RULE_varsuffix = 70
    RULE_varlist = 71
    RULE_exprlist = 72
    RULE_sqrfunc = 73
    RULE_chrfunc = 74
    RULE_lenfunc = 75
    RULE_ascfunc = 76
    RULE_midfunc = 77
    RULE_pdlfunc = 78
    RULE_peekfunc = 79
    RULE_intfunc = 80
    RULE_spcfunc = 81
    RULE_frefunc = 82
    RULE_posfunc = 83
    RULE_usrfunc = 84
    RULE_leftfunc = 85
    RULE_rightfunc = 86
    RULE_strfunc = 87
    RULE_fnfunc = 88
    RULE_valfunc = 89
    RULE_scrnfunc = 90
    RULE_sinfunc = 91
    RULE_cosfunc = 92
    RULE_tanfunc = 93
    RULE_atnfunc = 94
    RULE_rndfunc = 95
    RULE_sgnfunc = 96
    RULE_expfunc = 97
    RULE_logfunc = 98
    RULE_absfunc = 99
    RULE_tabfunc = 100

    ruleNames =  [ "prog", "line", "amperoper", "linenumber", "amprstmt", 
                   "statement", "vardecl", "printstmt1", "printlist", "getstmt", 
                   "letstmt", "variableassignment", "relop", "neq", "ifstmt", 
                   "forstmt1", "forstmt2", "nextstmt", "inputstmt", "readstmt", 
                   "dimstmt", "gotostmt", "gosubstmt", "pokestmt", "callstmt", 
                   "hplotstmt", "vplotstmt", "plotstmt", "ongotostmt", "ongosubstmt", 
                   "vtabstmnt", "htabstmnt", "himemstmt", "lomemstmt", "datastmt", 
                   "datum", "waitstmt", "xdrawstmt", "drawstmt", "defstmt", 
                   "tabstmt", "speedstmt", "rotstmt", "scalestmt", "colorstmt", 
                   "hcolorstmt", "hlinstmt", "vlinstmt", "onerrstmt", "prstmt", 
                   "instmt", "storestmt", "recallstmt", "liststmt", "popstmt", 
                   "amptstmt", "includestmt", "endstmt", "returnstmt", "restorestmt", 
                   "number", "func_", "signExpression", "exponentExpression", 
                   "multiplyingExpression", "addingExpression", "relationalExpression", 
                   "expression", "var_", "varname", "varsuffix", "varlist", 
                   "exprlist", "sqrfunc", "chrfunc", "lenfunc", "ascfunc", 
                   "midfunc", "pdlfunc", "peekfunc", "intfunc", "spcfunc", 
                   "frefunc", "posfunc", "usrfunc", "leftfunc", "rightfunc", 
                   "strfunc", "fnfunc", "valfunc", "scrnfunc", "sinfunc", 
                   "cosfunc", "tanfunc", "atnfunc", "rndfunc", "sgnfunc", 
                   "expfunc", "logfunc", "absfunc", "tabfunc" ]

    EOF = Token.EOF
    DOLLAR=1
    PERCENT=2
    RETURN=3
    PRINT=4
    GOTO=5
    GOSUB=6
    IF=7
    NEXT=8
    THEN=9
    REM=10
    CHR=11
    MID=12
    LEFT=13
    RIGHT=14
    STR=15
    LPAREN=16
    RPAREN=17
    PLUS=18
    MINUS=19
    TIMES=20
    DIV=21
    CLEAR=22
    GTE=23
    LTE=24
    GT=25
    LT=26
    COMMA=27
    LIST=28
    RUN=29
    END=30
    LET=31
    EQ=32
    FOR=33
    TO=34
    STEP=35
    INPUT=36
    SEMICOLON=37
    DIM=38
    SQR=39
    COLON=40
    TEXT=41
    HGR=42
    HGR2=43
    LEN=44
    CALL=45
    ASC=46
    HPLOT=47
    VPLOT=48
    PRNUMBER=49
    INNUMBER=50
    VTAB=51
    HTAB=52
    HOME=53
    ON=54
    PDL=55
    PLOT=56
    PEEK=57
    POKE=58
    INTF=59
    STOP=60
    HIMEM=61
    LOMEM=62
    FLASH=63
    INVERSE=64
    NORMAL=65
    ONERR=66
    SPC=67
    FRE=68
    POS=69
    USR=70
    TRACE=71
    NOTRACE=72
    AND=73
    OR=74
    DATA=75
    WAIT=76
    READ=77
    XDRAW=78
    DRAW=79
    AT=80
    DEF=81
    FN=82
    VAL=83
    TAB=84
    SPEED=85
    ROT=86
    SCALE=87
    COLOR=88
    HCOLOR=89
    HLIN=90
    VLIN=91
    SCRN=92
    POP=93
    SHLOAD=94
    SIN=95
    COS=96
    TAN=97
    ATN=98
    RND=99
    SGN=100
    EXP=101
    LOG=102
    ABS=103
    STORE=104
    RECALL=105
    GET=106
    EXPONENT=107
    AMPERSAND=108
    GR=109
    NOT=110
    RESTORE=111
    SAVE=112
    LOAD=113
    QUESTION=114
    INCLUDE=115
    CLS=116
    COMMENT=117
    STRINGLITERAL=118
    LETTERS=119
    NUMBER=120
    FLOAT=121
    WS=122

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(VBasicParser.EOF, 0)

        def line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VBasicParser.LineContext)
            else:
                return self.getTypedRuleContext(VBasicParser.LineContext,i)


        def getRuleIndex(self):
            return VBasicParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = VBasicParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 203 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 202
                self.line()
                self.state = 205 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==120):
                    break

            self.state = 207
            self.match(VBasicParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def linenumber(self):
            return self.getTypedRuleContext(VBasicParser.LinenumberContext,0)


        def amprstmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VBasicParser.AmprstmtContext)
            else:
                return self.getTypedRuleContext(VBasicParser.AmprstmtContext,i)


        def COMMENT(self):
            return self.getToken(VBasicParser.COMMENT, 0)

        def REM(self):
            return self.getToken(VBasicParser.REM, 0)

        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(VBasicParser.COLON)
            else:
                return self.getToken(VBasicParser.COLON, i)

        def getRuleIndex(self):
            return VBasicParser.RULE_line

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLine" ):
                listener.enterLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLine" ):
                listener.exitLine(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLine" ):
                return visitor.visitLine(self)
            else:
                return visitor.visitChildren(self)




    def line(self):

        localctx = VBasicParser.LineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_line)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 209
            self.linenumber()
            self.state = 222
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 210
                self.amprstmt()
                self.state = 217
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==40:
                    self.state = 211
                    self.match(VBasicParser.COLON)
                    self.state = 213
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if (((_la) & ~0x3f) == 0 and ((1 << _la) & -756694541133675016) != 0) or ((((_la - 64)) & ~0x3f) == 0 and ((1 << (_la - 64)) & 53962933057812871) != 0):
                        self.state = 212
                        self.amprstmt()


                    self.state = 219
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass

            elif la_ == 2:
                self.state = 220
                self.match(VBasicParser.COMMENT)
                pass

            elif la_ == 3:
                self.state = 221
                self.match(VBasicParser.REM)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AmperoperContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AMPERSAND(self):
            return self.getToken(VBasicParser.AMPERSAND, 0)

        def getRuleIndex(self):
            return VBasicParser.RULE_amperoper

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAmperoper" ):
                listener.enterAmperoper(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAmperoper" ):
                listener.exitAmperoper(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAmperoper" ):
                return visitor.visitAmperoper(self)
            else:
                return visitor.visitChildren(self)




    def amperoper(self):

        localctx = VBasicParser.AmperoperContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_amperoper)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 224
            self.match(VBasicParser.AMPERSAND)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LinenumberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(VBasicParser.NUMBER, 0)

        def getRuleIndex(self):
            return VBasicParser.RULE_linenumber

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLinenumber" ):
                listener.enterLinenumber(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLinenumber" ):
                listener.exitLinenumber(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLinenumber" ):
                return visitor.visitLinenumber(self)
            else:
                return visitor.visitChildren(self)




    def linenumber(self):

        localctx = VBasicParser.LinenumberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_linenumber)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 226
            self.match(VBasicParser.NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

